// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`IconButton should render Icon Button with a blend icon 1`] = `
<div>
  <div
    class="icon-button"
  >
    <div
      class="icon icon--blend"
    />
  </div>
</div>
`;

exports[`IconButton should render Icon Button with selected option 1`] = `
<div>
  <div
    class="icon-button icon-button--selected"
  >
    <div
      class="icon icon--blend"
    />
  </div>
</div>
`;

exports[`IconButton should render IconButton with custom className 1`] = `
<div>
  <div
    class="icon-button custom-class-name"
  >
    <div
      class="icon icon--blend"
    />
  </div>
</div>
`;
